--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
     text-align: center;
     color: rgb(255, 0, 0); transform: scale(2); transition: all 3s;
 }
+body{
+    background-color: aqua;
+}
+.id{
+    text-align: center;
+    color: black;
+}
 .mustache {
     width: 180px;
     height: 180px;
