--- a/style.css
+++ b/style.css
@@ -3,14 +3,11 @@
     color: rgb(255, 0, 0); transform: scale(2); transition: all 3s;
 }
 body{
-    width: 1000px;
-    height: 800px;
-    background-image: url("picture/pared.jpg");
-    background-repeat: repeat;
+    background-color: aqua;
 }
 .id{
     text-align: center;
-    color: white;
+    color: black;
 }
 .mustache {
     width: 180px;
@@ -18,7 +15,7 @@ body{
     left: 400px;
     border-radius: 50%;
     position: absolute;
-    color :white;
+    color :rgb(1, 30, 248);
     box-shadow: 
          150px  240px 0 0 currentColor,
          300px  240px 0 0 currentColor;
@@ -66,7 +63,7 @@ body{
 }
 @keyframes shakeRight {
     0%{
-        transform: rotate(50deg);
+        transform: rotate(50 deg);
     }
     50%{
         transform: rotate(30deg);
